--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -19,10 +19,9 @@
         font-size: 0.75rem;
         text-transform: uppercase;
         letter-spacing: 0.05em;
-        font-weight: 600;
+        font-weight: 700;
         margin-bottom: 0.25rem;
-        color: var(--body-color);
-        opacity: 0.8;
+        color: var(--bs-warning);
     }
 }
 
